--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<script>
-window.location.href = 'a/wpracach.html'
-</script>
+<title>LEKTURY - GOSTYCYN</title>
+<center><text>Wybierz lekturę którą chcesz przeczytać:</text></center>
+<form action="?" onsubmit="window.location.href = 'a/braklektury.html'; return false">
+<center><input type="submit" value="Poproś o dodanie lektury">
+</form></center>
+<center>
+<form action="?" onsubmit="window.location.href = 'https://lektury.github.io'; return false">
+<center><input type="submit" value="">
+</form></center>
