--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <center><input type="submit" value="Poproś o dodanie lektury">
 </form></center>
 <center>
-<form action="?" onsubmit="window.location.href = 'https://lektury.github.io'; return false">
-<center><input type="submit" value="">
+<form action="?" onsubmit="window.location.href = 'lektura/mikolajek.pdf'; return false">
+<center><input type="submit" value=Mikołajek"">
 </form></center>
