--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 </form></center>
 <center>
 <form action="?" onsubmit="window.location.href = 'lektura/mikolajek.pdf'; return false">
-<center><input type="submit" value=Mikołajek"">
+<center><input type="submit" value="Mikołajek">
 </form></center>
