--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>LEKTURY - GOSTYCYN</title>
 <center><text>Wybierz lekturę którą chcesz przeczytać:</text></center>
-<form action="?" onsubmit="window.location.href = 'a/braklektury.html'; return false">
+<form action="?" onsubmit=alert("Jeśli chcesz żebym dodał lekturę - Napisz na e-maila: karol.meger@wp.pl"); return false">
 <center><input type="submit" value="Poproś o dodanie lektury">
 </form></center>
 <center>
