--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <title>LEKTURY - GOSTYCYN</title>
 <center><text>Wybierz lekturę którą chcesz przeczytać:</text></center>
-<form action="?" onsubmit=alert("Jeśli chcesz żebym dodał lekturę - Napisz na e-maila: karol.meger@wp.pl"); return false">
+<form action="?" onsubmit="funkcja()"; return false">
 <center><input type="submit" value="Poproś o dodanie lektury">
 </form></center>
 <center>
 <form action="?" onsubmit="window.location.href = 'lektura/mikolajek.pdf'; return false">
 <center><input type="submit" value="Mikołajek">
 </form></center>
+<script>
+function funkcja()
+alert("Jeśli chcesz żebym dodał lekturę - Napisz na e-maila: karol.meger@wp.pl")
+</script>
