--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <center><input type="submit" value="Mikołajek">
 </form></center>
 <script>
-function funkcja()
+function funkcja() {
 alert("Jeśli chcesz żebym dodał lekturę - Napisz na e-maila: karol.meger@wp.pl")
+};
 </script>
+                          
+                         
