--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <center>
 <form action="?" onsubmit="window.location.href = 'lektura/mikolajek.pdf'; return false">
 <center><input type="submit" value="Mikołajek">
+</form>
+<center>
+<form action="?" onsubmit="window.location.href = 'lektura/akademiepanakleksa.pdf'; return false">
+<center><input type="submit" value="Akademia Pana Kleksa">
 </form></center>
 <script>
 function funkcja() {
