--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 </form>
 <center>
 <form action="?" onsubmit="window.location.href = 'lektura/akademiepanakleksa.pdf'; return false">
-<center><input type="submit" value="Akademia Pana Kleksa">
+<center><input type="submit" value="Dynastia Miziołków">
 </form></center>
+<form action="?" onsubmit="window.location.href = 'lektura/wpracach.html'; return false">
+<center><input type="submit" value="Mikołajek">
+                                              </form></center>
 <script>
 function funkcja() {
 alert("Jeśli chcesz żebym dodał lekturę - Napisz na e-maila: karol.meger@wp.pl")
