--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <form action="?" onsubmit="window.location.href = 'lektura/akademiepanakleksa.pdf'; return false">
 <center><input type="submit" value="Akademia Pana Kleksa">
 </form></center>
-<center><form action="?" onsubmit="window.location.href = 'lektura/a/wpracach.html'; return false">
+<center><form action="?" onsubmit="window.location.href = 'a/wpracach.html'; return false">
 <center><input type="submit" value="Dynastia Miziołków">
 </form></center>
 <script>
